# enterprise_challenge_sprint_1_hermes_reply

./: .gitignore  30-day-sprint-changelog.md  COVERAGE_IMPROVEMENT_PLAN.md  DEVELOPMENT_ORIENTATION.md  Documentação Final – Fase 1_ Smart Maintenance SaaS.markdown  LICENSE  PROJECT_GAUNTLET_PLAN.md  README.md  README_PORTUGUES.md  final_30_day_sprint.md  locustfile.py  system_documentation_and_architecture.md
data/: exceptions.py
smart-maintenance-saas/: .dockerignore  .env.test  .env_example.txt  .gitignore  .pre-commit-config.yaml  AUDIT_INDEX.md  AUDIT_RESULTS.txt  AUDIT_SUMMARY.md  Dockerfile  Dockerfile.ml  Dockerfile.mlflow  Dockerfile.ui  E2E_TEST_ISSUE_NOTE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SYSTEM_AUDIT_REPORT.md  UI_AUDIT_README.md  UI_v1.0_CRITICAL_FIX_LIST.md  alembic.ini  bandit_security_report_final.json  day_2_fix_report.md  debug_scheduling.py  docker-compose.yml  entrypoint.sh  feature_names.txt  locustfile.py  locustfile_fixed.py  locustfile_simple.py  mlflow_data.dvc  mlflow_db.dvc  pyproject.toml  pytest.ini  test_drift_direct.py  test_settings.py  test_validation_changes.py
smart-maintenance-saas/.dvc/: config
smart-maintenance-saas/alembic_migrations/: env.py
smart-maintenance-saas/alembic_migrations/versions/: 0907b6dcc25b_add_continuous_aggregates_and_indices_.py  20250811_120000_add_timescale_policies.py  20250812_090000_finalize_data_model.py  20250812_150000_add_default_uuid_to_sensor_readings_id.py  27b669e05b9d_fix_sensor_readings_primary_key_conflict.py  2a6b3cf9a7fc_add_maintenance_logs_table.py  3fc1a5e1eb13_merge_heads.py  4a7245cea299_add_sensor_readings_composite_index.py  71994744cf8e_placeholder_recovered_missing_revision.py  7bbe1dbdb5f5_add_human_decisions_table.py  d4a01b4dd5a1_create_initial_tables.py
smart-maintenance-saas/apps/: __init__.py  system_coordinator.py
smart-maintenance-saas/apps/agents/: __init__.py  base_agent.py
smart-maintenance-saas/apps/api/: __init__.py  dependencies.py  main.py
smart-maintenance-saas/apps/ml/: __init__.py  features.py  model_loader.py  model_utils.py  statistical_models.py
smart-maintenance-saas/apps/rules/: __init__.py  validation_rules.py
smart-maintenance-saas/apps/workflows/: __init__.py  learning_workflow.py  maintenance_workflow.py
smart-maintenance-saas/core/: __init__.py  agent_registry.py  base_agent_abc.py  logging_config.md  logging_config.py  redis_client.py
smart-maintenance-saas/data/: AI4I_2020_uci_dataset.dvc  MIMII_sound_dataset.dvc  XJTU_SY_bearing_datasets.dvc  __init__.py  agent_schemas.py  exceptions.py  kaggle_pump_sensor_data.dvc  nasa_bearing_dataset.dvc  schemas.py  sensor_data.csv  sensor_data.csv.dvc
smart-maintenance-saas/docs/: 24H_DEPLOYMENT_CRITICAL_PATH.md  30-day-sprint-changelog.md  CLOUD_DEPLOYMENT_GUIDE.md  COMPONENT_ANALYSIS.md  COMPREHENSIVE_DOCUMENTATION.md  COMPREHENSIVE_SYSTEM_ANALYSIS_REPORT.md  COVERAGE_IMPROVEMENT_PLAN.md  DAY_11_COMPLETION_SUMMARY.md  DAY_12_COMPLETION_SUMMARY.md  DAY_12_PART_2_COMPLETION_SUMMARY.md  DAY_17_LOAD_TEST_REPORT.md  DAY_18_PERFORMANCE_RESULTS.md  DAY_7_COMPLETION_SUMMARY.md  DAY_7_COMPLETION_SUMMARY_pt-br.md  DAY_8_SCHEDULING_AGENT_COMPLETION.md  DAY_8_SCHEDULING_AGENT_COMPLETION_pt-br.md  DAY_9_LEARNING_AGENT_COMPLETION.md  DAY_9_LEARNING_AGENT_COMPLETION_pt-br.md  DEPLOYMENT_EXECUTION_GUIDE.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_ORIENTATION.md  DOCUMENTATION_ALIGNMENT_REPORT.md  DVC_SETUP_GUIDE.md  EXECUTIVE_SUMMARY.md  FEEDBACK_LOG.md  FINAL_DEV_ROADMAP_TO_V1.md  FUTURE_ROADMAP.md  GUIA_CONFIGURACAO_RAPIDA.md  LOAD_TESTING_INSTRUCTIONS.md  MICROSERVICE_MIGRATION_STRATEGY.md  MODELS_SUMMARY.md  PERFORMANCE_BASELINE.md  PRE_DAY_12_REFINEMENTS.md  PRIORITIZED_BACKLOG.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_GAUNTLET_PLAN.md  QUICK_DEPLOYMENT_CARD.md  README.md  RISK_MITIGATION.md  (+35 more)
smart-maintenance-saas/examples/: __init__.py  fastapi_logging_example.py  learning_agent_demo.py  logging_example.py  notification_agent_demo.py  reporting_agent_example.py  using_settings.py
smart-maintenance-saas/notebooks/: 00_synthetic_data_validation.ipynb  00_synthetic_data_validation_output.ipynb  01_data_exploration_output.ipynb  01_synthetic_data_exploration.ipynb  01_synthetic_data_exploration_output.ipynb  02_anomaly_isolation_forest.ipynb  02_anomaly_isolation_forest_output.ipynb  02_synthetic_anomaly_isolation_forest.ipynb  02_synthetic_anomaly_isolation_forest_output.ipynb  03_forecast_prophet_output.ipynb  03_synthetic_forecast_prophet.ipynb  03_synthetic_forecast_prophet_output.ipynb  04_forecasting_tuning_and_challenger_models_output.ipynb  04_synthetic_forecasting_tuning_and_challenger_models.ipynb  04_synthetic_forecasting_tuning_and_challenger_models_output.ipynb  05_classification_benchmark.ipynb  05_classification_benchmark_output.ipynb  06_vibration_benchmark.ipynb  06_vibration_benchmark_output.ipynb  07_audio_benchmark.ipynb  07_audio_benchmark_output.ipynb  08_pump_classification.ipynb  08_pump_classification_output.ipynb  09_xjtu_vibration.ipynb  09_xjtu_vibration_output.ipynb  mlflow_validation_test.ipynb
smart-maintenance-saas/requirements/: api.txt
smart-maintenance-saas/scripts/: analyze_forecast_run.py  backup_db.sh  demo_scheduling_agent.py  deploy_vm.sh  export_schema.sh  export_sensor_data_csv.py  fix_timescaledb_schema.sh  generate_erd.sh  manual_test_anomaly_agent.py  migrate_db.py  phase2_end_to_end_simulation.py  quick_health_check.sh  restore_db.sh  retrain_models_on_drift.py  run_drift_check_agent.py  run_integration_tests.sh  run_retrain_agent.sh  run_tests.sh  seed_data.py  setup_dev.py  setup_toxiproxy.sh  smoke_test.py  smoke_v1.py  tag_models_with_sensor_types.py  test_golden_path_integration.py  test_serverless_models.py  toxiproxy_init.sh  validate_deployment.sh  validate_model_hashes.py
smart-maintenance-saas/tests/: README.md  __init__.py  conftest.py  test_db_example.py  test_demo_endpoints.py  test_ml_endpoints.py  test_settings.py  test_v1_stability.py  test_validation_changes.py
smart-maintenance-saas/ui/: streamlit_app.py
(+204 files in other folders)
