[tool.poetry]
name = "smart-maintenance-saas"
version = "0.1.0"
description = "A sophisticated SaaS platform for intelligent maintenance management using AI/ML capabilities"
authors = ["Your Organization <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "apps"},
    {include = "core"},
    {include = "data"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
kafka-python = "^2.0.2"
python-json-logger = "^2.0.7"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
numpy = "<2.0.0"
pandas = "^2.0.0"  # For data manipulation and ML feature preparation
scipy = "^1.11.0"  # For signal processing (FFT, statistical functions)
scikit-learn = "^1.4.0" # Using a recent version, compatible with numpy 2.x
lightgbm = "^4.0.0" # Gradient boosting framework for challenger models
prophet = "^1.1.5" # For time series forecasting and maintenance predictions
ortools = "^9.12.4544"
matplotlib = "^3.10.3"
seaborn = "^0.12.0"  # For enhanced statistical visualizations
chromadb = "^0.4.22" # Vector database for RAG capabilities
sentence-transformers = "^2.2.2" # For text embeddings in RAG
locust = "^2.37.10"
streamlit = "^1.45.1"
prometheus-fastapi-instrumentator = ">=6.0.0,<7.0.0"
tenacity = "^9.1.2"
evidently = "^0.7.12"
statsmodels = "^0.14.5"
dvc = "^3.62.0"
papermill = "^2.6.0"
mlflow = "^2.17.0"
boto3 = "^1.26.0"  # AWS SDK for S3 artifact storage and model loading
librosa = "^0.10.1"  # For audio processing and MFCC feature extraction
resampy = "^0.4.3"  # Audio resampling dependency for librosa
tqdm = "^4.66.0"  # For progress bars in data processing
slowapi = "^0.1.9"  # Rate limiting for API endpoints
apscheduler = "^3.10.4"  # Job scheduling for automated drift monitoring
aiohttp = "^3.8.0"  # HTTP client for API calls in drift agent
requests = "^2.31.0"  # HTTP client for simulation API calls
shap = "^0.46.0"  # SHAP values for explainable AI and model interpretability
plotly = "^5.17.0"  # Interactive plotting for SHAP visualizations and dashboards
psutil = "^6.1.0"  # System and process utilities for monitoring

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.1"
pytest-mock = "^3.12.0"
testcontainers = "^3.7.1"
httpx = "^0.25.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
factory-boy = "^3.3.0"
bandit = "^1.8.3"
safety = "^3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
# This tells mypy to consider the directory containing pyproject.toml 
# (i.e., smart-maintenance-saas/) as a base for modules.
mypy_path = "."

# Explicitly list your top-level source directories/packages
# These are located directly within smart-maintenance-saas/
packages = [
    "apps",
    "core",
    "data",
    "tests"
]

python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict = true
